# policy-as-code

./: .ai-assistant-config.json  .flake8  .gitignore  .pre-commit-config.yaml  AGENTIC_AI_README.md  AI_ASSISTANT_GUIDE.md  ARCHITECTURE_OVERVIEW.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  CRITICAL_FIXES_IMPLEMENTATION_REPORT.md  DATA_MODELS_ASSESSMENT.md  DEVELOPMENT.md  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_STATUS.md  DOCS_IMPLEMENTATION_TEST_REPORT.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  Dockerfile  Dockerfile.dev  Dockerfile.enhanced  Dockerfile.shacl  GETTING_STARTED.md  GOVERNANCE_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PHASE1_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  PUBLIC_BACKLOG.md  README.md  SECURITY.md  UX_IMPROVEMENT_SUMMARY.md  claude.md  cli.py  config.yaml  demo_features.py  dev-setup.sh  docker-compose.enhanced.yml  (+22 more)
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feedback-or-feature-request.md
.github/workflows/: ci.yml  graph-validation.yml  metadata.yml  ontology-validation.yml  policy-validation.yml  pr-summary.yml  test.yml
api/: __init__.py  fastapi_app.py
config/: config.yaml  domain_data_architecture.yaml  env.example
data/: catalog.ttl
data/functions/: test_policy_v1.0.py
decision_layer/: __init__.py  agent_performance_monitor.py  agentic_api.py  api.py  audit_endpoint.py  audit_service.py  auth.py  caller_auth.py  cli.py  config.py  conversational_interface.py  core.py  df_constraints.py  dsl_formal.py  dsl_loader.py  enhanced_registry.py  errors.py  executor.py  explain.py  explain_redaction.py  feature_store.py  knowledge_graph_integration.py  ledger_postgres.py  legal_refs.py  llm_integration.py  natural_language_interface.py  ontology_integration.py  registry.py  release.py  schemas.py  security.py  shadow_runner.py  storage.py  testing_slos.py  time_semantics.py  trace_ledger.py  trace_schema.py  trace_sink.py  workflow_orchestration.py  yaml_interface.py
docs/: README.md  api.md  architecture.md  claude.md  cli.md  configuration.md  deployment.md  development-plan.md  development.md  domain-first-architecture.md  dsl.md  examples.md  index.md  installation.md  interfaces.md  openapi.json  pr-summary.md  production-readiness.md  quickstart.md  release-notes.md  security.md  troubleshooting.md  web-interface.md  whitepaper-decision-engineering.md  yaml-interface.md
docs/architecture/: agentic-ai.md  architecture.md  cross-border.md  governance.md  security.md
docs/citizens/: eu-services.md  feedback.md  user-testing.md
docs/compliance/: EU_AI_ACT_COMPLIANCE.md  LEGAL_COMPLIANCE_ASSESSMENT.md
docs/getting-started/: claude.md  deployment.md  development.md
docs/implementation/: eu-deployment.md  nordic-deployment.md
docs/legal/: nordic-compliance.md
docs/multilingual/: contributing.md  nordic-languages.md
docs/ontology/: README.md  context.jsonld  controls.ttl
docs/reference/: api.md  cli.md  openapi.json
docs/security/: SECURITY_IMPLEMENTATION.md
docs/strategic/: nordic-ai-commons.md  whitepaper-decision-engineering.md
examples/: agentic_demo.py  approval_decision.yaml  bulletproof_demo.py  comprehensive_demo.py  cross_domain_demo.py  domain_first_demo.py  golden_path_demo.py  governance_demo.py  level1_basic_approval.py  level1_loan_approval.py  natural_language_temporal_query.py  opa_demo.py  refund_input.json  refund_policy.py  risk_assessment.py  simple_demo.py  temporal_query_cli.sh  temporal_query_example.py  test_data.json  vision_alignment_demo.py  yaml_decision_example.py
examples/demos/: USE_CASES_SUMMARY.md  comprehensive_demo.py  environmental_compliance.py  healthcare_eligibility.py  immigration_visa_processing.py  refund_policy.py  risk_assessment.py  social_benefits_allocation.py  tax_calculation.py  yaml_decision_example.py
examples/events/: loan_decision_event.jsonld
examples/policies/: healthcare_eligibility.yaml  loan_approval.metadata.jsonld  loan_approval_decision.yaml
examples/scripts/: temporal_query_cli.sh
examples/test_policy/: v1.0.py
functions/decisions/: final_test.json  final_verification.json  test_trace.json
functions/ledger/: entry_0_1761080645.json  entry_0_1761080751.json  entry_0_1761080888.json  entry_0_1761081231.json
functions/refund_policy/: v1.0.py
functions/test_policy/: v1.0.py
policies/: refund_policy.yaml
policy_as_code/: __init__.py  cli.py  simple_api.py  trace_schema.py
policy_as_code/ai/: conversational.py  core.py  llm.py  monitoring.py  workflow.py
policy_as_code/api/: agentic.py  audit.py  enhanced_rest.py  graphql_api.py  rest.py  secure_api.py  websocket_api.py
policy_as_code/audit/: __init__.py  audit_replay_api.py
policy_as_code/core/: __init__.py  bulletproof_flow.py  context.py  enhanced_engine.py  enhanced_registry.py  errors.py  security.py  storage.py  types.py
policy_as_code/data/: __init__.py  autonomous_products.py  (+6 more)
registry/: loan_approval_1.0.json
schemas/: CoreOntology.json  DecisionFunctionSpec.json  EligibilityInput.json  EligibilityOutput.json  SchemaRegistry.json  TraceRecord.json  catalog_shape.ttl  policy_schema.json  policy_shape.ttl
scripts/: check_rego_metadata.py  comment_pr_summary.py  generate_pr_summary.py  graph_resolver.py  pr_summary_config.yaml  validate_package_naming.py  validate_policies.py  validate_policies_comprehensive.py  validate_shacl.py  yaml_to_jsonld.py
tests/: __init__.py  test_ai_comprehensive.py  test_api.py  test_api_comprehensive.py  test_audit_drift_reporting.py  test_audit_replay_api.py  test_bulletproof_flow.py  test_cli.py  test_cli_integration.py  test_comprehensive_suite.py  test_core.py  test_core_comprehensive.py  test_docs_implementation_crosscheck.py  test_edge_cases.py  test_eli_registry_integration.py  test_eli_validation.py  test_executor.py  test_features.py  test_governance_comprehensive.py  test_graph_resolver.py  test_mtls_jwt_nonce.py  test_policy_validation.py  test_refund_policy.py  test_security_comprehensive.py  test_working.py
(+49 files in other folders)
