
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-layer"
version = "0.1.0"
description = "A lightweight policy evaluation engine for versioned, testable business logic in YAML"
authors = [
  { name="Eevamaija Virtanen" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pydantic>=1.10",
  "pyyaml",
  "fastapi",
  "uvicorn",
  "httpx",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov"
]

[tool.setuptools.packages.find]
include = ["decision_layer", "api"]
where = ["."]